--- a/src/subject3/subject3.html
+++ b/src/subject3/subject3.html
@@ -27,13 +27,27 @@
             <!-- 절대 1개 파일의 용량이 100MB를 넘지 않도록 하시오. 이를 어겨 발생하는 모든 문제는 학생이 알아서 해결하시오. -->
             <!-- 1개 파일의 용량을 1MB 이하로 하시오. -->
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
-            <iframe
-              style="aspect-ratio: 560/315; width: 100%"
-              src="https://www.youtube.com/embed/c9eN5pKT8rU?si=X0k6_ZHcrVeAzTTL&amp;loop=1&autoplay=1&mute=1controls=0"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
+            <img src="./assets/1.jpg" alt="" />
+            <img src="./assets/2.jpg" alt="" />
+            <img src="./assets/3.jpg" alt="" />
+            <img src="./assets/4.jpg" alt="" />
+            <img src="./assets/5.jpg" alt="" />
+            <img src="./assets/6.jpg" alt="" />
+            <img src="./assets/7.jpg" alt="" />
+            <img src="./assets/8.jpg" alt="" />
+            <img src="./assets/9.jpg" alt="" />
+            <img src="./assets/10.jpg" alt="" />
+            <img src="./assets/11.jpg" alt="" />
+            <img src="./assets/12.jpg" alt="" />
+            <img src="./assets/13.jpg" alt="" />
+            <img src="./assets/14.jpg" alt="" />
+            <img src="./assets/15.jpg" alt="" />
+            <img src="./assets/16.jpg" alt="" />
+            <img src="./assets/17.jpg" alt="" />
+            <img src="./assets/18.jpg" alt="" />
+            <img src="./assets/19.jpg" alt="" />
+            <img src="./assets/20.jpg" alt="" />
+
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
             <!-- 1개 파일의 용량을 1MB 이하로 하시오. -->
             <!-- 절대 1개 파일의 용량이 100MB를 넘지 않도록 하시오. 이를 어겨 발생하는 모든 문제는 학생이 알아서 해결하시오. -->
