--- a/src/subject1/subject1.html
+++ b/src/subject1/subject1.html
@@ -85,8 +85,12 @@
             <img src="./assets/14.jpg" alt="" />
             <img src="./assets/15.jpg" alt="" />
             <img src="./assets/16.jpg" alt="" />
+            <img src="./assets/16_2 .jpg" alt="" />
+            <img src="./assets/16_3.jpg" alt="" />
             <img src="./assets/17.jpg" alt="" />
             <img src="./assets/18.jpg" alt="" />
+            <img src="./assets/18_2.jpg" alt="" />
+            <img src="./assets/18_3.jpg" alt="" />
             <iframe
               style="aspect-ratio: 560/315; width: 100%"
               src="https://www.youtube.com/embed/YaE7G-Maj4g?si=KwZ8bqdGznjLY7hg&amp;loop=1&autoplay=1&mute=1controls=0"
